# grnbck-properties

./: .env  .env.example  .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  tsconfig.app.tsbuildinfo
.claude/: settings.local.json
.github/workflows/: release.yml
src/: main.tsx.backup
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  property_scraper.rs
src/lib/: exportPdf.ts  finance.ts  geocoding.ts  supabase.ts  types.ts
src/ui/: App.tsx  PropertyFiles.tsx  PropertyFinder.tsx  PropertyMap.tsx  PropertyModal.tsx  styles.css
