[package]
name = "grnbck-properties"
version = "0.1.0"
description = "grnbck London"
authors = ["grnbck"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip"] }
scraper = "0.20"
tokio = { version = "1", features = ["full"] }
url = "2.5"
anyhow = "1.0"
rand = "0.8"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
